--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- Hero Section -->
   <section class="text-center py-20 bg-black-50">
-    <h2 class="text-4xl font-bold mb-9">Hello, I'm chikka Raghu Ram</h2>
+    <h2 class="text-4xl font-bold mb-9">Hello, I'm  Raghu Ram</h2>
     <p class="text-xl text-gray-700">Web Developer & Designer</p>
   </section>
 
