--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>My Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -15,14 +15,14 @@
       <div class="space-x-4">
         <a href="#about" class="hover:text-blue-500">About</a>
         <a href="#projects" class="hover:text-blue-500">Projects</a>
-        <a href="#contact" class="hover:text-blue-500">Contact</a>
+        <a href="#certificates" class="hover:text-blue-500">Certificates</a>
       </div>
     </div>
   </nav>
 
   <!-- Hero Section -->
   <section class="text-center py-20 bg-black-50">
-    <h2 class="text-4xl font-bold mb-9">Hello, I'm  Raghu Ram</h2>
+    <h2 class="text-4xl font-bold mb-9">Hello, I'm Raghu Ram</h2>
     <p class="text-xl text-gray-700">Web Developer & Designer</p>
   </section>
 
@@ -51,15 +51,15 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="py-16 px-6 md:px-20 bg-white">
-    <h3 class="text-3xl font-bold mb-6">Contact Me</h3>
-    <form class="max-w-xl space-y-4">
-      <input type="text" placeholder="Name" class="w-full p-3 border border-gray-300 rounded" />
-      <input type="email" placeholder="Email" class="w-full p-3 border border-gray-300 rounded" />
-      <textarea placeholder="Your Message" class="w-full p-3 border border-gray-300 rounded h-32"></textarea>
-      <button type="submit" class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-blue-600">Send</button>
-    </form>
+  <!-- Certificates Section -->
+  <section id="certificates" class="py-16 px-6 md:px-20 bg-white">
+    <h3 class="text-3xl font-bold mb-6">Certificates</h3>
+    <ul class="space-y-4 text-gray-700 list-disc list-inside">
+      <li>Frontend Development Certification - Coursera</li>
+      <li>Responsive Web Design - freeCodeCamp</li>
+      <li>JavaScript Essentials - Udemy</li>
+      <li>Tailwind CSS Masterclass - Scrimba</li>
+    </ul>
   </section>
 
   <!-- Footer -->
@@ -69,3 +69,4 @@
 
 </body>
 </html>
+
