--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
   <section id="certificates" class="py-16 px-6 md:px-20 bg-white">
     <h3 class="text-3xl font-bold mb-6">Certificates</h3>
     <ul class="space-y-4 text-gray-700 list-disc list-inside">
-      <li>Frontend Development Certification - Coursera</li>
-      <li>Responsive Web Design - freeCodeCamp</li>
-      <li>JavaScript Essentials - Udemy</li>
-      <li>Tailwind CSS Masterclass - Scrimba</li>
+      <li>HTML AND CSS - SCALLER</li>
+      <li>INTRODUCTION TO MODREN AI - CISCO</li>
+      <li>INTRODUCTION TO DATA STRUCTURE - CISCO</li>
     </ul>
   </section>
 
@@ -69,4 +68,6 @@
 
 </body>
 </html>
+
+
 
