--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
   <section id="certificates" class="py-16 px-6 md:px-20 bg-white">
     <h3 class="text-3xl font-bold mb-6">Certificates</h3>
     <ul class="space-y-4 text-lg text-gray-600 list-disc list-inside">
-      <li>Full Stack Web Development - Coursera</li>
-      <li>Responsive Web Design - freeCodeCamp</li>
-      <li>JavaScript Algorithms and Data Structures - freeCodeCamp</li>
-      <li>Python for Everybody - University of Michigan</li>
+      <li>html tutorial mode - scaler</li>
+      <li>css tutorial model - scaler</li>
+      <li>introduction to Data Structures - cisco</li>
     </ul>
   </section>
 
