Update certificates section with new entries
Added additional certificates to the Certificates Section.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
       <li>html tutorial mode - scaler</li>
       <li>css tutorial model - scaler</li>
       <li>introduction to Data Structures - cisco</li>
+      <li>problem solving and process controls - IBM</li>
+      <li>communication and personality dynamics - IBM</li>
+      <li>artificial intelligence fundamentals - IBM</li>
     </ul>
   </section>
 
@@ -68,3 +71,4 @@
 
 </body>
 </html>
+
